--- a/ecommerce-product-website/src/styles/main.css
+++ b/ecommerce-product-website/src/styles/main.css
@@ -60,7 +60,7 @@ nav {
 
 .block {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
@@ -82,6 +82,8 @@ nav {
   background-repeat: no-repeat;
 }
 
+.block__section--bg-white { background-color: rgba(244, 244, 244, 1); }
+
 
 
 
@@ -102,9 +104,10 @@ nav {
   text-align: center;
   border-radius: 100px;
   border: none;
+  cursor: pointer;
 }
 
-.btn--header { 
+.btn--yellow { 
   color: rgba(0, 0, 0, 1);
   background-color: rgba(255, 199, 0, 1);
 }
@@ -112,6 +115,13 @@ nav {
 .btn--black {
   color: rgba(255, 255, 255, 1);
   background-color: rgba(0, 0, 0, 1);
+}
+
+.btn--form {
+  margin: 0;
+  padding: 0;
+  width: 507px;
+  height: 41px;
 }
 
 
@@ -159,6 +169,8 @@ nav {
   line-height: 55px;
   color: rgba(43, 40, 53, 1);
 }
+
+.title--white { color: white; }
 
 .title--header {
   width: 508px;
@@ -223,6 +235,115 @@ nav {
 \*------------------------------------*/
 
 .image { display: block; }
+
+
+
+
+
+/*------------------------------------*\
+  #FORM
+\*------------------------------------*/
+
+.form-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 34px auto 64.19px auto;
+  background-color: rgba(248, 248, 249, 1);
+  width: 1253px;
+  height: 334.81px;
+  text-align: center;
+}
+
+.form__title { margin: 52px auto 17px auto; }
+
+.form__sub-title { margin-bottom: 47px; }
+
+.input-text {
+  margin-bottom: 19px;
+  border: 1px solid #BFBFBF;
+  border-radius: 18px;
+  width: 507px;
+  height: 36px;
+}
+
+.input-text::placeholder {
+  font-weight: 400;
+  size: 14px;
+  line-height: 17.07px;
+}
+
+
+
+/*------------------------------------*\
+  #CARD
+\*------------------------------------*/
+
+.product-container {
+  background-color: rgba(251, 252, 255, 1);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card {
+  margin-top: 34px;
+  padding-left: 49px;
+  width: 390px;
+  height: 560px;
+  background-color: rgba(248, 248, 249, 1);
+}
+
+.card--padding-left { padding-left: 22px; }
+
+.card__img { 
+  width: 393px;
+  height: 323px;
+}
+
+.card__title { margin: 0px; }
+
+.card__title--hidden { visibility: hidden; }
+
+.card__desc { 
+  margin: 0px;
+  width: 267px;
+}
+
+.card__price { margin: 21px 0px; }
+
+.card__btn { margin: 15px 21px; }
+
+
+
+
+
+/*------------------------------------*\
+  #FOOTER
+\*------------------------------------*/
+
+.grid-container {
+  background-color: rgba(43, 40, 53, 1);
+  width: 1440px;
+  height: 343.81px;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+}
+
+.grid-item {
+  color: white;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 22px;
+}
+
+ul > li {
+  list-style-type: none;
+  text-transform: uppercase;
+}
+
+
 
 
 
